--- a/templates/emp_list.html
+++ b/templates/emp_list.html
@@ -35,7 +35,7 @@
                     <tr>
                         <td class="ps-4">
                             <div class="d-flex align-items-center gap-3">
-                                <!-- Profile Picture Logic (Matches your requested snippet) -->
+                                <!-- Profile Picture Logic -->
                                 <div class="avatar-wrapper">
                                     {% if emp.image %}
                                         <img src="{{ cloudinary_url(emp.image)[0] }}" class="table-thumb" alt="{{ emp.name }}">
@@ -78,5 +78,3 @@
     });
 </script>
 {% endblock %}
-
-
