--- a/templates/emp_list.html
+++ b/templates/emp_list.html
@@ -37,8 +37,10 @@
                             <div class="d-flex align-items-center gap-3">
                                 <!-- Profile Picture Logic -->
                                 <div class="avatar-wrapper">
-                                    {% if emp.image %}
-                                        <img src="{{ cloudinary_url(emp.image)[0] }}" class="table-thumb" alt="{{ emp.name }}">
+                                    {% if emp.image_file %}
+                                        <img src="{{ cloudinary_url(emp.image_file)[0] }}" class="table-thumb" alt="{{ emp.name }}">
+                                    {% elif emp.image %}
+                                         <img src="{{ cloudinary_url(emp.image)[0] }}" class="table-thumb" alt="{{ emp.name }}">
                                     {% else %}
                                         <div class="table-thumb bg-secondary d-flex align-items-center justify-content-center text-white h-100 w-100">
                                             <i class="fas fa-user"></i>
