--- a/templates/emp_list.html
+++ b/templates/emp_list.html
@@ -35,7 +35,7 @@
                     <tr>
                         <td class="ps-4">
                             <div class="d-flex align-items-center gap-3">
-                                <!-- Profile Picture Logic: Direct URL from Database -->
+                                <!-- CORRECTED IMAGE LOGIC: Use direct URL -->
                                 <div class="avatar-wrapper">
                                     {% if emp.image %}
                                         <img src="{{ emp.image }}" class="table-thumb" alt="{{ emp.name }}"
