--- a/templates/evening.html
+++ b/templates/evening.html
@@ -23,7 +23,7 @@
                 <div class="input-group input-group-glass">
                     <span class="input-group-text"><i class="fa-solid fa-user-tie"></i></span>
                     <select class="form-select" id="employee_id">
-                        <option value="">-- Select Staff --</option>
+                        <option value="">-- Select Employee --</option>
                         {% for emp in employees %}
                             <option value="{{ emp.id }}">{{ emp.name }}</option>
                         {% endfor %}
@@ -177,3 +177,4 @@
 </script>
 <script src="{{ url_for('static', filename='js/evening.js') }}"></script>
 {% endblock %}
+
