--- a/templates/login.html
+++ b/templates/login.html
@@ -31,7 +31,7 @@
 
     .login-image {
       flex: 1;
-      background-image: url('{{ url_for("static", filename="uploads/real.png") }}');
+      background-image: url('{{ url_for("static", filename="uploads/Real_home.jpg") }}');
       background-size: cover;
       background-position: center;
       filter: blur(1px);
@@ -144,4 +144,5 @@
   <script>AOS.init({ once: true });</script>
 </body>
 </html>
+
 
